--- a/Advanced HTML and CSS/Project - Personal Portfolio/styles.css
+++ b/Advanced HTML and CSS/Project - Personal Portfolio/styles.css
@@ -18,15 +18,30 @@ body {
     }
 }
 
+.body {
+    /* flex: 1; */
+    box-shadow: 1px 0px .4em black;
+    z-index: 1;
+}
+
+a:visited {
+    color: black;
+}
+
+a {
+    color: black;
+}
+
 .header {
+    background-image: url("images/3506328.jpg");
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #ffeead;
-    background-image: url("images/61769.jpg");
+    /* background-color: #ffeead; */
     background-size: cover;
     gap: 2rem;
     padding: 2rem;
+    box-shadow: 1px 0px .4em black;
 }
 
 .headerimage > img {
@@ -34,19 +49,24 @@ body {
     max-width: 350px;
     width: 100%;
     height: auto;
+    border-radius: 25px;
+    box-shadow: 8px 8px 2px 1px grey;
 }
 
 .picturecopyright {
     font-size: 8px;
+    color: black;
 }
 
 .card {
-    border-style: solid;
+    /* border-style: solid; */
     border-width: thin;
     max-width: 450px;
     padding: 1rem;
     min-width: 250px;
     background-color: white;
+    border-radius: 25px;
+    box-shadow: 8px 8px 2px 1px grey;
 }
 
 .card > p {
@@ -60,7 +80,6 @@ body {
     padding-bottom: 1rem;
     padding-left: 5rem;
     padding-right: 5rem;
-
 }
 
 .content {
@@ -76,16 +95,26 @@ body {
 .projectbox {
     border-style: solid;
     border-radius: 20px;
-    border-width: thin;
+    /* border-width: thin; */
+    border-color: gold;
     margin: 1rem;
     height: 200px;
+    background-color: white;
+    box-shadow: 5px 5px .4em black;
+}
+
+.projectbox > img {
+    max-width: 100%;
+    max-height: 100%;
+    /* border-radius: 25px; */
 }
 
 .footer {
-    background-color: peachpuff;
+    /* background-color: peachpuff; */
     display: flex;
     align-items: center;
     flex-direction: column;
+    background-image: url("images/61769.jpg");
 
     gap: 1rem;
     padding: 1rem;
