--- a/Advanced HTML and CSS/Project - Personal Portfolio/styles.css
+++ b/Advanced HTML and CSS/Project - Personal Portfolio/styles.css
@@ -42,11 +42,14 @@ a {
     width: 100%;
     height: auto;
     border-radius: 25px;
+    box-shadow: 8px 8px 2px 1px grey;
+
 }
 
 .picturecopyright {
     font-size: 8px;
     color: black;
+    text-align: center;
 }
 
 .card {
@@ -65,7 +68,7 @@ a {
 
 .container {
     flex: 2;
-    background-color: whitesmoke;
+    /* background-color: whitesmoke; */
     padding-top: 1rem;
     padding-bottom: 1rem;
     padding-left: 5rem;
@@ -74,7 +77,7 @@ a {
 }
 
 div > img:hover {
-    transition: transform .25s ease-in-out;
+    transition: transform .5s ease-in-out;
     transform: scale(1.1);
 }
 
@@ -86,6 +89,7 @@ div > img:hover {
 
 .project {
     text-align: center;
+    padding: 1rem;
 }
 
 .projectbox {
@@ -105,6 +109,10 @@ div > img:hover {
     height: 100%;
     border-radius: 20px;
     object-fit: cover;
+}
+
+.projecttext {
+    font-size: small;
 }
 
 .footer {
