--- a/JavaScript/Project - Library/style.css
+++ b/JavaScript/Project - Library/style.css
@@ -3,3 +3,20 @@ table, th, td {
     border-color: black;
     border-width: thin;
 }
+
+label {
+    display: inline-block;
+    min-width: 5rem;
+}
+
+.field {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+tr > button {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    border-radius: 5px;
+    border-width: 1px;
+}
