--- a/JavaScript/Project - Library/style.css
+++ b/JavaScript/Project - Library/style.css
@@ -4,6 +4,11 @@ table, th, td {
     border-width: thin;
 }
 
+td {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
 label {
     display: inline-block;
     min-width: 5rem;
