--- a/JavaScript/Project - Tic Tac Toe/style.css
+++ b/JavaScript/Project - Tic Tac Toe/style.css
@@ -8,4 +8,10 @@ table, th, td {
     height: 20px;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
   }
+
+#playerprompt {
+  margin-top: 1rem;
+  text-align: center;
+}
