--- a/JavaScript/Project - Tic Tac Toe/style.css
+++ b/JavaScript/Project - Tic Tac Toe/style.css
@@ -2,16 +2,23 @@ h1 {
   text-align: center;
 }
 
-table, th, td {
+table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+td {
     border:1px solid black;
-    width: 200px;
-    height: 20px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 50px;
+    height: 30px;
     text-align: center;
   }
 
 #playerprompt {
   margin-top: 1rem;
   text-align: center;
+}
+
+td:hover {
+  background-color: blanchedalmond;
 }
