--- a/JavaScript/Project - Library (class)/style.css
+++ b/JavaScript/Project - Library (class)/style.css
@@ -22,6 +22,6 @@ label {
 tr > button {
     margin-left: 1rem;
     margin-right: 1rem;
-    /* border-radius: 5px; */
-    /* border-width: 1px; */
+    border-radius: 5px;
+    border-width: 1px;
 }
