added settings to have multiple bundles

--- a/JavaScript/Project - Restaurant Page/src/style.css
+++ b/JavaScript/Project - Restaurant Page/src/style.css
@@ -1,4 +1,8 @@
 #content {
-    font-style: italic;
-    background: url('./restaurant.jpg');
+    
+}
+
+.background {
+    background: url('background.jpg');
+    background-repeat: no-repeat;
 }
