--- a/JavaScript/Project - Restaurant Page/src/style.css
+++ b/JavaScript/Project - Restaurant Page/src/style.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: 'MyFont';
+    src: url('./SimpleHandmade.otf') format('opentype'),
+         url('./SimpleHandmade.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+  }
+
 body {
     background: url('./background.jpg');
+    font-family: 'MyFont';
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* justify-content: space-between; */
+    /* flex: 1; */
 }
