--- a/JavaScript/Project - Todo List/src/style.css
+++ b/JavaScript/Project - Todo List/src/style.css
@@ -6,7 +6,7 @@
 
 /* COLORS and FONTS */
 body {
-    color: white;
+    color: black;
     text-align: center;
     font-size: 24px;
     line-height: 3;
@@ -90,9 +90,10 @@ body {
     width: 100px;
 }
 
-.grid-container {
+.projects-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto;
+    /* grid-template-columns: auto auto auto; */
     /* background-color: #2196F3; */
     padding: 10px;
 }
@@ -100,7 +101,7 @@ body {
 .grid-item {
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
-    font-size: 30px;
+    padding: 5px;
+    font-size: small;
     text-align: center;
   }
