--- a/JavaScript/Project - Todo List/src/style.css
+++ b/JavaScript/Project - Todo List/src/style.css
@@ -115,3 +115,12 @@ body {
     /* font-size: small; */
     /* text-align: center; */
   }
+
+.material-symbols-outlined {
+    vertical-align: middle;
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+}
