--- a/JavaScript/Project - Library (class)/style.css
+++ b/JavaScript/Project - Library (class)/style.css
@@ -25,3 +25,40 @@ tr > button {
     border-radius: 5px;
     border-width: 1px;
 }
+
+body {
+    font: 1em sans-serif;
+    /* width: 200px; */
+    padding: 1em;
+    margin: 0 auto;
+  }
+
+  p * {
+    display: block;
+}
+
+/* This is our style for the invalid fields */
+input:focus:invalid {
+    outline: none;
+}
+
+/* This is the style of our error messages */
+.authorError, 
+.titleError,
+.pagesError {
+    width: 100%;
+    padding: 0;
+  
+    font-size: 80%;
+    color: white;
+    background-color: #900;
+    border-radius: 0 0 5px 5px;
+  
+    box-sizing: border-box;
+}
+
+.authorError.active, 
+.titleError.active,
+.pagesError.active {
+    padding: 0.3em;
+}
