added zip code validation

--- a/JavaScript/Form Validation with JavaScript/Practice - Project/style.css
+++ b/JavaScript/Form Validation with JavaScript/Practice - Project/style.css
@@ -3,7 +3,8 @@ h1 {
 }
 
 .emailError,
-.countryError {
+.countryError,
+.zipcodeError {
     font-size: 11px;
     color: red;
     font-weight: bold;
@@ -15,4 +16,8 @@ form {
 
 input:invalid {
     background-color: #fdd;
+}
+
+input:valid {
+    background-color: lightgreen;
 }
