--- a/JavaScript/Project - Battlehip/src/style.css
+++ b/JavaScript/Project - Battlehip/src/style.css
@@ -1,10 +1,17 @@
+body {
+    max-width: 600px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(10, auto);
     grid-gap: 5px;
     background-color: #2196F3;
     padding: 5px;
-    max-width: 600px;
 }
 
 .grid-container > div {
@@ -14,6 +21,7 @@
     font-size: 20px;
 }
 
-.splitter {
-    height: 2rem;
+form {
+    display: flex;
+    justify-content: space-around;
 }
