Added a object to handle gameinfo and fixed board rendering

--- a/JavaScript/Project - Battlehip/src/style.css
+++ b/JavaScript/Project - Battlehip/src/style.css
@@ -3,25 +3,25 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
 }
 
 .grid-container {
     display: grid;
     grid-template-columns: repeat(10, auto);
-    grid-gap: 5px;
+    grid-gap: 2px;
     background-color: #2196F3;
-    padding: 5px;
+    padding: 2.5px;
 }
 
 .grid-container > div {
     background-color: rgba(255, 255, 255, 0.8);
     text-align: center;
-    padding: 5px;
+    padding: 4px;
     font-size: 20px;
 }
 
 form {
     display: flex;
     justify-content: space-around;
+    margin-top: 2rem;
 }
