--- a/React/Project - CV Application/CV-application/src/App.css
+++ b/React/Project - CV Application/CV-application/src/App.css
@@ -9,13 +9,20 @@
 
 .container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-bottom: 2rem;
+  justify-items: center;
 }
 
 .educationalListContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.listItem {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 input, label {
