added a practical experience section

--- a/React/Project - CV Application/CV-application/src/App.css
+++ b/React/Project - CV Application/CV-application/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 840px;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -16,7 +16,7 @@
 
 .educationalListContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(6, 1fr);
 }
 
 .listItem {
