--- a/React/Project - CV Application/CV-application/src/index.css
+++ b/React/Project - CV Application/CV-application/src/index.css
@@ -25,11 +25,11 @@ a:hover {
 
 body {
   margin: 0;
-  /* display: flex; */
-  /* justify-content: space-around; */
-  /* place-items: center; */
-  /* min-width: 320px; */
-  /* min-height: 100vh; */
+  /* display: flex;
+  justify-content: space-around;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh; */
 }
 
 h1 {
@@ -47,6 +47,8 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  
+  margin-left: 10px;
 }
 button:hover {
   border-color: #646cff;
