--- a/React/Project - CV Application/CV-application/src/index.css
+++ b/React/Project - CV Application/CV-application/src/index.css
@@ -49,6 +49,7 @@ button {
   transition: border-color 0.25s;
   
   margin-left: 10px;
+  margin-bottom: 10px;
 }
 button:hover {
   border-color: #646cff;
