--- a/React/Project - Shopping Cart/shopping-cart/src/index.css
+++ b/React/Project - Shopping Cart/shopping-cart/src/index.css
@@ -1,9 +1,10 @@
 .container {
     max-width: 800px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     padding: 20px;
     background-color: white;
     border-radius: 10px;
+    font-family: "Sofia", sans-serif;
 }
 
 .container header {
@@ -65,6 +66,7 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
+    justify-content: space-around;
 }
 
 .container nav li {
