--- a/React/Project - Shopping Cart/shopping-cart/src/index.css
+++ b/React/Project - Shopping Cart/shopping-cart/src/index.css
@@ -85,3 +85,10 @@ nav li a {
   text-decoration: none;
   color: black;
 }
+
+.homepage img {
+    border-radius: 10%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    width: 500px;
+    height: auto;
+  }
