--- a/React/Project - Shopping Cart/shopping-cart/src/index.css
+++ b/React/Project - Shopping Cart/shopping-cart/src/index.css
@@ -89,6 +89,11 @@ nav li a {
 .homepage img {
     border-radius: 10%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    width: 500px;
+    width: 250px;
     height: auto;
   }
+
+#cartGrid {
+    border-style: solid;
+    border-width: 1px;
+}
