--- a/React/Project - Messaging App/messaging_app/app/assets/stylesheets/application.css
+++ b/React/Project - Messaging App/messaging_app/app/assets/stylesheets/application.css
@@ -51,6 +51,7 @@ main {
   padding: 1rem;
   border-style: solid;
   border-width: 1px;
+  /* max-width: max-content; */
 
   background-color: gainsboro
 }
@@ -150,12 +151,24 @@ a:hover, ul:hover {
 }
 
 .messageWindow {
-  min-height: 70vh;
+  min-height: 65vh;
   background-color: #f7f7f7;
   padding-left: 1rem;
+  padding-top: 1rem;
+  padding-right:  1rem;
   margin-bottom: 1rem;
+  border-radius: 5px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.messageBox > textarea:nth-child(1) {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+       box-sizing: border-box;
 }
 
 .messageButton {
   margin-top: 1rem;
+  text-align: end;
 }
