--- a/React/Project - Messaging App/messaging_app/app/assets/stylesheets/application.css
+++ b/React/Project - Messaging App/messaging_app/app/assets/stylesheets/application.css
@@ -151,11 +151,12 @@ a:hover, ul:hover {
 }
 
 .messageWindow {
+  display: flex;
+  align-items: flex-end;
+
   min-height: 65vh;
   background-color: #f7f7f7;
-  padding-left: 1rem;
-  padding-top: 1rem;
-  padding-right:  1rem;
+  padding:  1rem;
   margin-bottom: 1rem;
   border-radius: 5px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
